Committing fully working chat room and controller.